<resources>
    <string name="app_name">SicloApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleApp">SicloApp</string>
    <string name="loginString">Entrar</string>
    <string name="registerString">Registrar</string>
    <string name="userName">Nombre(s)</string>
    <string name="userLastName">Apellido Paterno</string>
    <string name="userSecondLastName">Apellido Materno</string>
    <string name="userEmail">Email</string>
    <string name="userPass">Password</string>
    <string name="continueString">Continuar</string>
    <string name="welcomeUser">Bienvenido, %1$s</string>
    <string name="instructor_name">Instructor: %1$s</string>
    <string name="init_class">Horario: %1$s</string>
    <string name="duration_class">Duración: %1$s min</string>
    <string name="intensity_class">Intensidad: %1$s</string>
    <string name="inscription_title">Inscripción a clase</string>
    <string name="inscription_message">Deseas unirte a la clase: %1$s \n<b>Instructor</b>: %2$s \n<b>Horario</b>: %3$s \n<b>Duración</b>: %4$s min \n<b>Intensidad</b>: %5$s</string>
    <string name="user_invalid">Usuario o contraseña erróneos</string>
    <string name="user_register_success">Usuario registrado con éxito</string>
    <string name="field_empty">Este campo no debe estar vacío.</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="video_url">https://drive.google.com/file/d/1MjhlX4Q_qvKKeDwB178TeMrnLrLIFw4k</string>
    <string name="day_name_number_day"></string>
</resources>
