<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            app:layout_constraintBottom_toTopOf="@id/guidelineMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_bike_app" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewTitleApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/titleApp"
            android:textColor="@color/colorTitleAppText"
            android:textSize="@dimen/titleAppSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageIcon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            style="@style/buttonColor"
            android:layout_width="@dimen/two_fifty_dp"
            android:layout_height="@dimen/sixty_dp"
            android:text="@string/loginString"
            app:layout_constraintBottom_toTopOf="@id/buttonRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineMain" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            style="@style/buttonColor"
            android:layout_width="@dimen/two_fifty_dp"
            android:layout_height="@dimen/sixty_dp"
            android:text="@string/registerString"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>